--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@loadable/component": "^5.16.4",
+    "@types/loadable__component": "^5.13.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "react-router-dom": "^7.0.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
